--- a/app/static/assets/index.html
+++ b/app/static/assets/index.html
@@ -11,7 +11,7 @@
 <script>
 window.onload = function() {
     Commento.init({
-        serverUrl: "http://127.0.0.1:5000",
+        serverUrl: "",
     });
 }
 </script>
